--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/Kixantrix/Locational-Music-Service#readme",
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "browserify": "^11.2.0",
+    "http-server": "^0.8.5",
     "react": "^0.14.0"
   }
 }
