--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify -t reactify index.js -o bundle.js && http-server"
+    "build": "browserify -t reactify index.js -o bundle.js && http-server",
+    "watch": "watchify -t reactify index.js -o bundle.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "http-server": "^0.8.5",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "reactify": "^1.1.1"
+    "reactify": "^1.1.1",
+    "watchify": "^3.4.0"
   }
 }
