--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^3.3.5",
     "browserify": "^11.2.0",
     "http-server": "^0.8.5",
+    "jquery": "^2.1.4",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "reactify": "^1.1.1",
