--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.5",
     "browserify": "^11.2.0",
     "http-server": "^0.8.5",
-    "react": "^0.14.0"
+    "httpdispatcher": "^0.4.0",
+    "react": "^0.14.0",
   }
 }
