--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify -t reactify index.js -o bundle.js && http-server",
+    "build": "browserify -t reactify index.js -o bundle.js && http-server --cors",
     "watch": "watchify -t reactify index.js -o bundle.js"
   },
   "repository": {
